--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,36 @@
+@media screen and (max-width: 1100px) {
+
+	.factor {
+		flex-basis: 95%;
+	}
+}
+@media screen and (max-width: 1100px) {
+
+	.factor2 {
+		flex-basis: 95%;
+	}
+}
+@media screen and (max-width: 1075px) {
+
+	.team {
+		flex-wrap: wrap;
+	}
+}
+@media screen and (max-width: 950px) {
+	.table {
+		margin-top: -120px;
+	}
+	.table ul li {
+	width: 100%;
+	}
+	.wrapper5 {
+		border: none;
+		box-shadow: none;
+	}
+	.buttons2 {
+		display: none;
+	}
+}
 @media all and (min-width:800px) and (max-width:850px) {
 	* {
 		visibility: hidden;
@@ -6,16 +39,47 @@
 @media all and (min-width:800px) and (max-width:850px) {
 	body {
 		display: flex;
-		background: #ff004e url("http://www.reactiongifs.com/r/2011/09/stanley_blinking.gif") no-repeat fixed center;
+		background: white  url("http://data.whicdn.com/images/68755961/large.gif") no-repeat fixed center;
+	}
+}
+@media screen and (max-width: 860px) {
+	.author {
+		display: none;
 	}
 }
 @media screen and (max-width: 700px) {
 	.socialicons ul {
 		display: none;
 	}
+	.separator {
+		display: none;
+	}
+	.factors {
+		margin-top: 10%;
 }
 @media screen and (max-width: 680px) {
 	.jumbotron {
 		flex-direction: column;
 	}
 }
+
+	@media screen and (max-width: 650px) {
+		.wrapper {
+			border: none;
+			box-shadow: none;
+		}
+		.factors {
+			display: none;
+		}
+		.buttons2 {
+	display: none;
+		}
+		}
+
+	@media screen and (max-width: 600px) {
+		.float input {
+			display: block;
+			width: 80%;
+	}
+
+
