--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 1100px) {
 
 	.factor {
@@ -31,6 +32,11 @@
 		display: none;
 	}
 }
+@media screen and (max-width: 850px) {
+   .cards .card4 {
+      display: none;
+   }
+}
 @media all and (min-width:800px) and (max-width:850px) {
 	* {
 		visibility: hidden;
@@ -57,6 +63,7 @@
 	.factors {
 		margin-top: 10%;
 }
+}
 @media screen and (max-width: 680px) {
 	.jumbotron {
 		flex-direction: column;
@@ -81,5 +88,29 @@
 			display: block;
 			width: 80%;
 	}
+     .cards .card3 {
+        display: none;
+     }
+}
+@media screen and (max-width: 600px) {
+     .cards .card2 {
+      display: none;
+   }
+
+}
 
 
+
+
+
+@media screen and (max-width: 360px) {
+
+.firstrow {
+   display: block;
+   }
+   .off {
+    width: 100%;
+
+
+   }
+}
