--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,8 @@
 }
 
 body {
-	overflow-x: hidden;
 	background: white;
-	/*	overflow: hidden;*/
+   overflow-x: hidden;
 }
 
 .mainwindow {
@@ -96,9 +95,8 @@ p {
 	transition: all 0.3s;
 }
 
-.container {
+.container2 {
 	margin-top: 50px;
-	overflow: hidden;
 }
 
 div[class^="block"]:hover {
@@ -157,6 +155,7 @@ div[class^="block"] i:hover {
 	height: 140px;
 	margin: 10px 10px;
 	line-height: 2.6;
+   overflow: hidden;
 }
 
 .block3 {
@@ -165,6 +164,7 @@ div[class^="block"] i:hover {
 	margin: 10px 10px;
 	line-height: 5.5;
 	min-width: 100px;
+   overflow: hidden;
 }
 
 
@@ -375,10 +375,9 @@ div[class^="block"] i:hover {
 	text-align: center;
 	color: #b7b7b7;
 	position: relative;
-	margin-top: 52px;
+	margin-top: 40px;
 	font-size: 12px;
 }
-
 
 /*ABOUT US*/
 
@@ -529,7 +528,7 @@ hr {
 	padding: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 40px;
+	margin-top: 50px;
 	border: 20px dashed #ffb934;
 	font-family: 'Roboto', sans-serif;
 	text-shadow: 0px 1px 1px #ffffff;
@@ -593,7 +592,7 @@ hr {
 /*WINDOW CHANGING ANIMATION*/
 
 .lightSpeedIn {
-	display: block;
+   display: block;
 	-webkit-animation-name: lightSpeedIn;
 	animation-name: lightSpeedIn;
 	-webkit-animation-timing-function: ease-out;
@@ -607,7 +606,7 @@ hr {
 @-webkit-keyframes lightSpeedIn {
 	0% {
 		-webkit-transform: translate3d(100%, 0, 0) skewX(-30deg);
-		transform: translate3d(100%, 0, 0) skewX(-30deg);
+		transform: translate(100%, 0, 0) skewX(-30deg);
 		opacity: 0;
 	}
 	60% {
@@ -627,28 +626,6 @@ hr {
 	}
 }
 
-@keyframes lightSpeedIn {
-	0% {
-		-webkit-transform: translate3d(100%, 0, 0) skewX(-30deg);
-		transform: translate3d(100%, 0, 0) skewX(-30deg);
-		opacity: 0;
-	}
-	60% {
-		-webkit-transform: skewX(20deg);
-		transform: skewX(20deg);
-		opacity: 1;
-	}
-	80% {
-		-webkit-transform: skewX(-5deg);
-		transform: skewX(-5deg);
-		opacity: 1;
-	}
-	100% {
-		-webkit-transform: none;
-		transform: none;
-		opacity: 1;
-	}
-}
 
 
 /*END OF WINDOW CHANGING ANIMATION*/
@@ -662,7 +639,7 @@ hr {
 	padding: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 40px;
+   margin-top: 40px;
 	border: 20px dashed #ffff34;
 	font-family: 'Roboto', sans-serif;
 	text-shadow: 0px 1px 1px #ffffff;
@@ -713,7 +690,7 @@ width: 50%;
 	padding: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 40px;
+   margin-top: 50px;
 	border: 20px dashed #a8ff98;
 	font-family: 'Roboto', sans-serif;
 	text-shadow: 0px 1px 1px #ffffff;
@@ -752,7 +729,7 @@ width: 50%;
 	padding: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 40px;
+   margin-top: 50px;
 	border: 20px dashed #ffb11f;
 	font-family: 'Roboto', sans-serif;
 	text-shadow: 0px 1px 1px #ffffff;
@@ -768,6 +745,7 @@ width: 50%;
 }
 
 .wrap22 {
+  width: 100%;
 	margin-top: -40px;
 	transform: scale(0.8);
 	margin: 0 auto;
@@ -858,7 +836,7 @@ width: 50%;
 
 /*END OF PRICING TABLE*/
 
-/*GALLERY*/
+/*GALLERY 1*/
 .wrapper6 {
 	position: relative;
 	width: 65%;
@@ -866,7 +844,7 @@ width: 50%;
 	padding: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 40px;
+   margin-top: 50px;
 	border: 20px dashed #ff6565;
 	font-family: 'Roboto', sans-serif;
 	text-shadow: 0px 1px 1px #ffffff;
@@ -876,6 +854,7 @@ width: 50%;
 	transition: all 0.3s;
 	min-height: 390px;
 }
+
 #gal {
 
 	background: #fafafa;
@@ -911,7 +890,7 @@ width: 50%;
 	padding-left: 20px;
 	padding-top: 10px;
 	border-bottom: 1px dotted #cecece;
-	width: 120px;
+	width: 220px;
 	margin-bottom: 15px;
 }
 
@@ -940,4 +919,154 @@ width: 50%;
 
 }
 
-/*END OF GALLERY*/
+/*END OF GALLERY 1*/
+
+
+/*GALLERY 2*/
+.wrapper7 {
+   position: relative;
+   width: 70%;
+   height: 65vh;
+   background: white;
+   padding: 20px;
+   margin-right: auto;
+   margin-left: auto;
+   margin-top: 40px;
+   border: 20px dashed #f0f0f0;
+   font-family: 'Roboto', sans-serif;
+   text-shadow: 0px 1px 1px #ffffff;
+   border-radius: 40px;
+   color: gray;
+   box-shadow: 0px 0px 20px #c6c6c6;
+   transition: all 0.3s;
+   z-index: 555555;
+}
+
+.off3 {
+   position: sticky;
+   margin-right: -2000px;
+   margin-top: -5300px;
+}
+.wrapper7 img {
+   height: 390px;
+}
+.wrapper7 h2 {
+   width: 140px;
+   margin: 0 auto 20px 10px;
+   border-bottom: 1px dotted #d4d4d4;
+}
+.wrapper7 .col {
+   display: flex;
+   justify-content: center;
+}
+.wrapper7 .col h2 {
+   margin: 0 auto 25px 10px;
+   border-bottom: 1px dotted gray;
+}
+.collection {
+  flex: 1;
+   position: absolute;
+   width: auto;
+   height: auto;
+   margin: 0 auto;
+   margin-top: 20px;
+}
+.collection:hover .card {
+   z-index: 1;
+   opacity: 1;
+   width: 120px;
+   height: 169px;
+}
+.collection:hover .card:hover {
+   z-index: 10;
+   -webkit-transform: rotate(0deg);
+   width: 213px;
+   height: 300px;
+   top: -38px;
+   opacity: 1;
+}
+.collection .card {
+   position: relative;
+   float: left;
+   width: 142px;
+   height: 200px;
+   -webkit-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.2);
+   -webkit-transition: all 0.3s ease-out;
+}
+.collection .card:nth-child(1) {
+   -webkit-transform: rotate(-6deg);
+   top: 40px;
+   left: 9px;
+   z-index: 5;
+}
+.collection .card:nth-child(2) {
+   -webkit-transform: rotate(-2deg);
+   left: -9px;
+   z-index: 3;
+}
+.collection .card:nth-child(3) {
+   -webkit-transform: rotate(-5deg);
+   top: 26px;
+   left: -36px;
+   z-index: 1;
+}
+.collection .card:nth-child(4) {
+   -webkit-transform: rotate(7deg);
+   top: 15px;
+   left: -46px;
+   z-index: 3;
+}
+.collection2 {
+   flex: 1;
+   position: absolute;
+   width: auto;
+   height: auto;
+   margin: 0 auto;
+   margin-top: 250px;
+}
+.collection2:hover .card {
+   z-index: 1;
+   opacity: 1;
+   width: 120px;
+   height: 169px;
+}
+.collection2:hover .card:hover {
+   z-index: 10;
+   -webkit-transform: rotate(0deg);
+   width: 213px;
+   height: 300px;
+   top: -38px;
+   opacity: 1;
+}
+.collection2 .card {
+   position: relative;
+   float: left;
+   width: 142px;
+   height: 200px;
+   -webkit-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.2);
+   -webkit-transition: all 0.3s ease-out;
+}
+.collection2 .card:nth-child(1) {
+   -webkit-transform: rotate(-6deg);
+   top: 40px;
+   left: 9px;
+   z-index: 5;
+}
+.collection2 .card:nth-child(2) {
+   -webkit-transform: rotate(-2deg);
+   left: -9px;
+   z-index: 3;
+}
+.collection2 .card:nth-child(3) {
+   -webkit-transform: rotate(-5deg);
+   top: 26px;
+   left: -36px;
+   z-index: 1;
+}
+.collection2 .card:nth-child(4) {
+   -webkit-transform: rotate(7deg);
+   top: 15px;
+   left: -46px;
+   z-index: 3;
+}
+/*END OF GALLERY 1*/
